kubernetes/cluster0/apps/kube-system/cilium/gateway/gateway.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default-gateway
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: ${GATEWAY_IP}
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.${SECRET_PUBLIC_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.${SECRET_PUBLIC_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: "${SECRET_PUBLIC_DOMAIN/./-}-tls"
